# hfendpoint-poc

./: pyproject.toml
examples/whisper/: Dockerfile  endpoint.py  requirements.txt  transcribe.py
src/hfendpoint/: __init__.py
src/hfendpoint/core/: __init__.py  endpoint.py  engine.py  handler.py
src/hfendpoint/engines/: vllm.py
src/hfendpoint/handlers/: monitor.py
src/hfendpoint/handlers/openai/audio/: transcriptions.py
src/hfendpoint/openai/: __init__.py  utils.py
src/hfendpoint/openai/audio/: transcriptions.py
src/infinity/: __init__.py  version.py
src/infinity/audio/: __init__.py
src/infinity/core/: __init__.py  endpoint.py  engine.py  handler.py
src/infinity/engines/: vllm.py
src/infinity/openai/: __init__.py
src/infinity/openai/audio/: transcriptions.py
